# harko

./: README.md
ai/: requirements.txt
ai/src/: agent.py  voice_processor.py
app/: package.json
app/src/components/: VoiceRecorder.tsx
program/: Anchor.toml  Cargo.toml
program/src/: lib.rs
