[package]
name = "Harko"
version = "0.1.0"
edition = "2021"
description = "Real-time Voice AI Agent Framework on Solana"
authors = ["Harko Team"]

[lib]
crate-type = ["cdylib", "lib"]
name = "Harko"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16"
anchor-lang = "0.28.0"
borsh = "0.10.3"
thiserror = "1.0.40"
bytemuck = { version = "1.13", features = ["derive"] }

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
